@@ -170,6 +170,7 @@ GUI:
    setWordWrap/isWordWrapEnabled, to split words on to the next line.
    setMultiLine and isMultiLineEnabled, inserts a newline instead of sending
    EGET_EDITBOX_ENTER events.
+   setPasswordBox/isPasswordBox to use the edit box for password input.
    setTextAlignment, to align the text to left, right, top, bottom and centers
    setAutoScroll, to enable and disable automatic scrolling with the cursor
 
